--- a/Portfolio-React/src/components/MyProject/MyProject.module.scss
+++ b/Portfolio-React/src/components/MyProject/MyProject.module.scss
@@ -36,7 +36,11 @@
     font-family: var(--font-family-tertiary);
     font-size: 2.5rem;
     font-weight: 700;
-    margin: 1.9rem 0 1.5rem;
+    margin: 0.5rem 0;
+
+    @include media-query('sm') {
+      margin: 1.9rem 0 1.5rem;
+    }
   }
 
   &__description {
